objects/dfsle__EnvelopeStatus__c.object
<CustomObject>
    <description>DocuSign Status</description>
    <fields>
        <fullName>dfsle__Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__DocuSignId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DocuSign Envelope ID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dfsle__EmailSubject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Expires__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__LastStatusUpdate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Status Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Declined or Voided Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__SenderEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dfsle__SenderName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Name</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__TimeToComplete__c</fullName>
        <formula>IF(dfsle__Status__c  = &quot;Voided&quot;, &quot;&quot;,  IF(dfsle__Status__c  = &quot;Declined&quot;,  &quot;&quot;,   IF(dfsle__Status__c  = &quot;Sent&quot;,  &quot;&quot;,
			TEXT(ROUND((dfsle__Completed__c  -  dfsle__Sent__c) - MOD(dfsle__Completed__c  - dfsle__Sent__c, 1), 0)) &amp;&quot; day(s), &quot;&amp;
			TEXT(ROUND(MOD(dfsle__Completed__c - dfsle__Sent__c, 1) * 24 - MOD(MOD(dfsle__Completed__c - dfsle__Sent__c,1) * 24, 1), 0)) &amp;&quot; hour(s), &quot;&amp;
			TEXT(ROUND(MOD(MOD(dfsle__Completed__c - dfsle__Sent__c, 1) * 24, 1) * 60, 0)) &amp;&quot; minute(s)&quot;)))</formula>
        <label>Time to Complete</label>
        <type>Text</type>
    </fields>
    <label>DocuSign Status</label>
    <listViews>
        <fullName>dfsle__All</fullName>
        <columns>NAME</columns>
        <columns>dfsle__DocuSignId__c</columns>
        <columns>dfsle__Sent__c</columns>
        <columns>dfsle__Status__c</columns>
        <columns>dfsle__SourceId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>dfsle__AllCompleted</fullName>
        <columns>NAME</columns>
        <columns>dfsle__SenderName__c</columns>
        <columns>dfsle__EmailSubject__c</columns>
        <columns>dfsle__Sent__c</columns>
        <columns>dfsle__Completed__c</columns>
        <columns>dfsle__TimeToComplete__c</columns>
        <columns>dfsle__SourceId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dfsle__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Envelopes</label>
    </listViews>
    <listViews>
        <fullName>dfsle__AllEnvelopes</fullName>
        <columns>NAME</columns>
        <columns>dfsle__SenderName__c</columns>
        <columns>dfsle__EmailSubject__c</columns>
        <columns>dfsle__Status__c</columns>
        <columns>dfsle__Sent__c</columns>
        <columns>dfsle__Completed__c</columns>
        <columns>dfsle__LastStatusUpdate__c</columns>
        <columns>dfsle__TimeToComplete__c</columns>
        <columns>dfsle__SourceId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Envelopes</label>
    </listViews>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>